--- a/tracebot_mockup_gazebo/package.xml
+++ b/tracebot_mockup_gazebo/package.xml
@@ -10,21 +10,24 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>rviz</exec_depend>
-  <exec_depend>ur_description</exec_depend>
-  <exec_depend>xacro</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>image_publisher</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>effort_controllers</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>gazebo_ros_control</exec_depend>
+  <exec_depend>image_publisher</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>position_controllers</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>rviz</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tracebot_mockup_description</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>ur_description</exec_depend>
+  <exec_depend>ur_gazebo</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
   <test_depend>roslaunch</test_depend>
 
